changing presentation link

--- a/estadio_dragao/docs/milestone01/Presentation.mdx
+++ b/estadio_dragao/docs/milestone01/Presentation.mdx
@@ -6,7 +6,7 @@ export default function PresentationPage() {
   return (
       <div className={styles.pdfContainer}>
         <iframe
-          src={useBaseUrl('img/Context.pdf#view=FitH')}
+          src="/img/Context.pdf#view=FitH"
           width="80%"
           height="90%"
           style={{ border: 'none' }}
