--- a/estadio_dragao/docs/milestone01/Presentation.mdx
+++ b/estadio_dragao/docs/milestone01/Presentation.mdx
@@ -5,8 +5,23 @@ import styles from './presentation.module.css';
 export default function PresentationPage() {
   return (
       <div className={styles.pdfContainer}>
+        <a href="https://www.canva.com/design/DAG3BSN6VUg/Iv_y-5si_s9nYPbDe5FnLA/view?utm_content=DAG3BSN6VUg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h7461811278">Our presentation</a>
         <iframe
-          src="/img/Context.pdf#view=FitH"
+          src="img/Context.pdf#view=FitH"
+          width="80%"
+          height="90%"
+          style={{ border: 'none' }}
+          title="Project Presentation"
+        />
+        <iframe
+          src="../../img/Context.pdf#view=FitH"
+          width="80%"
+          height="90%"
+          style={{ border: 'none' }}
+          title="Project Presentation"
+        />
+        <iframe
+          src="../img/Context.pdf#view=FitH"
           width="80%"
           height="90%"
           style={{ border: 'none' }}
